[Update] Update version to 1.0.2

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/output.css?v=1.0.1" rel="stylesheet">
+        <link href="/output.css?v=1.0.2" rel="stylesheet">
         <title>Aplikasi Management Airdrop</title>
     </head>
     <body>
@@ -118,7 +118,7 @@
                             Completed
                         </h1>
                         <div id="completed-content">
-                            <button type="button" class="relative block w-full border-2 border-gray-300 border-dashed rounded-lg p-12 text-center hover:border-gray-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            <button type="button" class="add-airdrop relative block w-full border-2 border-gray-300 border-dashed rounded-lg p-12 text-center hover:border-gray-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto h-12 w-12 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                                 </svg>
@@ -525,12 +525,12 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/datepicker.bundle.js"></script>
-        <script src="js/vars.js?v=1.0.1"></script>
-        <script src="js/helpers.js?v=1.0.1"></script>
-        <script src="js/wallet.js?v=1.0.1"></script>
-        <script src="js/network.js?v=1.0.1"></script>
-        <script src="js/airdrop.js?v=1.0.1"></script>
-        <script src="js/script.js?v=1.0.1"></script>
-        <script src="js/auth.js?v=1.0.1"></script>
+        <script src="js/vars.js?v=1.0.2"></script>
+        <script src="js/helpers.js?v=1.0.2"></script>
+        <script src="js/wallet.js?v=1.0.2"></script>
+        <script src="js/network.js?v=1.0.2"></script>
+        <script src="js/airdrop.js?v=1.0.2"></script>
+        <script src="js/script.js?v=1.0.2"></script>
+        <script src="js/auth.js?v=1.0.2"></script>
     </body>
 </html>
