--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/output.css?v=1.0.2" rel="stylesheet">
+        <link href="/output.css?v=1.0.3" rel="stylesheet">
         <title>Aplikasi Management Airdrop</title>
     </head>
     <body>
@@ -455,7 +455,7 @@
                                 Add Airdrop
                             </h3>
                             <div class="mt-2">
-                                <div class="space-y-6 sm:space-y-5">
+                                <div class="space-y-6 sm:space-y-5" id="form-airdrop-field">
                                     <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
                                         <label for="form-airdrop-name" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">
                                         Name
@@ -508,7 +508,10 @@
                         </div>
                     </div>
                     <div class="mt-5 sm:mt-6">
-                        <button class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:col-start-2 sm:text-sm">Add More Information</button>
+                        <button onclick="addMoreInformation()" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:col-start-2 sm:text-sm">Add More Information</button>
+                    </div>
+                    <div class="mt-2 hidden" id="deleteAirdropButton">
+                        <button onclick="deleteAirdrop()" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:col-start-2 sm:text-sm">Delete Airdrop</button>
                     </div>
                     <div class="mt-2 sm:mt-2 sm:grid sm:grid-cols-2 sm:gap-3 sm:grid-flow-row-dense">
                         <button onclick="addAirdrop()" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:col-start-2 sm:text-sm">
@@ -525,12 +528,12 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/datepicker.bundle.js"></script>
-        <script src="js/vars.js?v=1.0.2"></script>
-        <script src="js/helpers.js?v=1.0.2"></script>
-        <script src="js/wallet.js?v=1.0.2"></script>
-        <script src="js/network.js?v=1.0.2"></script>
-        <script src="js/airdrop.js?v=1.0.2"></script>
-        <script src="js/script.js?v=1.0.2"></script>
-        <script src="js/auth.js?v=1.0.2"></script>
+        <script src="js/vars.js?v=1.0.3"></script>
+        <script src="js/helpers.js?v=1.0.3"></script>
+        <script src="js/wallet.js?v=1.0.3"></script>
+        <script src="js/network.js?v=1.0.3"></script>
+        <script src="js/airdrop.js?v=1.0.3"></script>
+        <script src="js/script.js?v=1.0.3"></script>
+        <script src="js/auth.js?v=1.0.3"></script>
     </body>
 </html>
