[Add] Add bundler and minify all code and replace public dir to dist

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Start CSS -->
         <link href="/output.css?v=1.0.4" rel="stylesheet">
+        <!-- END CSS -->
         <title>Aplikasi Management Airdrop</title>
     </head>
     <body>
@@ -528,6 +530,8 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/datepicker.bundle.js"></script>
+
+        <!-- Start JS -->
         <script src="js/vars.js?v=1.0.4"></script>
         <script src="js/helpers.js?v=1.0.4"></script>
         <script src="js/wallet.js?v=1.0.4"></script>
@@ -535,5 +539,6 @@
         <script src="js/airdrop.js?v=1.0.4"></script>
         <script src="js/script.js?v=1.0.4"></script>
         <script src="js/auth.js?v=1.0.4"></script>
+        <!-- End JS -->
     </body>
 </html>
