--- a/src/index.html
+++ b/src/index.html
@@ -524,7 +524,7 @@
                         </div>
                     </div>
                     <div class="mt-5">
-                        <div class="hidden">
+                        <div id="addMoreInformationButton">
                             <button onclick="addMoreInformation()" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:col-start-2 sm:text-sm">Add More Information</button>
                         </div>
                         <div class="mt-2 hidden" id="deleteAirdropButton">
